# YODAVI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  web_app.py  yodavi.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/sample_media/: README.md
assets/static/js/: photobooth.js
assets/templates/: photobooth.html
config/: __init__.py  settings.py
docs/: DETECTION_RESULTS.md  INSTALLATION.md  USAGE.md
docs/images/: README.md
scripts/: create_demo_gifs.py  create_screenshots.py  download_samples.py
src/: __init__.py  web_app.py  yodavi.py
static/css/: photobooth.css
tests/: __init__.py  test_detection.py
